<resources>
    <string name="app_name">ProjetoCartaoDeVisita</string>
    <string name="business_card">Business Cards</string>
    <string name="floating_action_button_add_card">Add Button</string>
    <string name="name_business_card">Name Business Card</string>
    <string name="contact">Contact</string>
    <string name="email">contact@email.com</string>
    <string name="company">Company</string>
    <string name="close_button">Close button</string>
    <string name="new_business_card">New Business Card</string>
    <string name="label_name">Name</string>
    <string name="hint_email">E-mail</string>
    <string name="color">Color</string>
    <string name="add_new_card">Add New Card</string>
    <string name="show_sucess">"Business Card Registered Successfully "</string>
</resources>